--- a/index.html
+++ b/index.html
@@ -71,16 +71,6 @@
 				<p>&nbsp;</p>
 			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="medium-12 small-12 columns"
-			<div id="space4"
-				<p>&nbsp;</p>
-			</div>
-		</div>
-	</div>
-
-
 
 
 	<div class="row">
@@ -94,7 +84,7 @@
 		</div>
 		<div class="small-12 medium-4 large-4 columns"
 		<div id="twii">
-			<img src="images/twittero.png">
+			<img src="images/twentyfour.jpg">
 		</div>
 	</div>
 
