--- a/brooklyn/index.html
+++ b/brooklyn/index.html
@@ -7,7 +7,18 @@
 <title> Brooklyn Parks</title>
 </head>
 <body>
-<p>
+<nav>
+	<div class="row">
+		<div class="large-12 medium-12 small-12 columns"
+			<ul style="list-style-type: none;">
+  				 <li class="box"><a href="../manhattan/index.html">Manhattan</a></li>
+ 				 <li class="box"><a href="../brooklyn/index.html">Brooklyn</a></li>
+ 				 <li class="box"><a href="../rules/index.html">The Rules</a></li>
+ 				 <li class="box"><a href="../index.html">Home</a></li>
+ 			</ul> 
+ 		</div>
+ 	</div>
+</nav>
 	
 	<h1> Parks </h1>
 	<ul>
