--- a/manhattan/mpark4.html
+++ b/manhattan/mpark4.html
@@ -7,7 +7,18 @@
 <title> DeWitt Clinton Park</title>
 </head>
 <body>	
-
+<nav>
+	<div class="row">
+		<div class="large-12 medium-12 small-12 columns"
+			<ul style="list-style-type: none;">
+  				 <li class="box"><a href="../manhattan/index.html">Manhattan</a></li>
+ 				 <li class="box"><a href="../brooklyn/index.html">Brooklyn</a></li>
+ 				 <li class="box"><a href="../rules/index.html">The Rules</a></li>
+ 				 <li class="box"><a href="../index.html">Home</a></li>
+ 			</ul> 
+ 		</div>
+ 	</div>
+</nav>
 <h1> Dewitt Clinton Park</h1>
 
 
@@ -22,7 +33,7 @@ Located on W 52 Street and 11th Avenue in Midtown,Dewitt Clinton Park <br />is a
 <img src="images/dewitt3.jpg" alt="Dewitt Park" width="382" height="310" />
 </div>
 	</p>
-<h2> Recent Highlights</h2>
+
 
 </body>
 
