--- a/rules/index.html
+++ b/rules/index.html
@@ -8,11 +8,21 @@
 </head>
 
 <body>	
+	<nav>
+	<div class="row">
+		<div class="large-12 medium-12 small-12 columns"
+			<ul style="list-style-type: none;">
+  				 <li class="box"><a href="../manhattan/index.html">Manhattan</a></li>
+ 				 <li class="box"><a href="../brooklyn/index.html">Brooklyn</a></li>
+ 				 <li class="box"><a href="rules/index.html">The Rules</a></li>
+ 			</ul> 
+ 		</div>
+ 	</div>
+</nav>
 <h1> The Rules </h1>
 
-<p> There are some rules that all players should know. 
+<p> There are some rules that all players should know. </p>
 
-</p>
 </div>
 <div id="rules">
 <ul>
