--- a/brooklyn/bpark3.html
+++ b/brooklyn/bpark3.html
@@ -7,6 +7,18 @@
 <title> Dean Street Playground</title>
 </head>
 <body>	
+	<nav>
+	<div class="row">
+		<div class="large-12 medium-12 small-12 columns"
+			<ul style="list-style-type: none;">
+  				 <li class="box"><a href="../manhattan/index.html">Manhattan</a></li>
+ 				 <li class="box"><a href="../brooklyn/index.html">Brooklyn</a></li>
+ 				 <li class="box"><a href="../rules/index.html">The Rules</a></li>
+ 				 <li class="box"><a href="../index.html">Home</a></li>
+ 			</ul> 
+ 		</div>
+ 	</div>
+</nav>
 
 <h1>Dean Street Playground</h1>
 
@@ -22,7 +34,7 @@ Located between Dean Street and 6th Avenue in Prospect Heights, <br /> Dean Stre
 <img src="images/dean3.jpg" alt="Dean Playground" width="382" height="310" />
 </div>
 	</p>
-<h2> Recent Highlights</h2>
+
 </body>
 
 
