--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title> NYC</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="css/foundation.min.css">
+	<link rel="stylesheet" type="text/css" href="css/foundation.css">
 	<link rel="stylesheet" type="text/css" href="css/websitestyle.css">
 	<link rel="shortcut icon" href="images/favicon1.ico" >
 	<meta name="viewport" content="width=device-width">
@@ -12,14 +12,15 @@
 
 <body>
 
-<nav>
+<nav class="top-bar" data-topbar>
 	<div class="row">
 		<div class="large-12 medium-12 small-12 columns"
 			<ul style="list-style-type: none;">
-  				 <li class="box"><a href=manhattan/index.html>Manhattan</a></li>
- 				 <li class="box"><a href=brooklyn/index.html>Brooklyn</a></li>
- 				 <li class="box"><a href=rules/index.html>The Rules</a></li>
- 			</ul> 
+  				 <li class="box"><a href="manhattan/index.html">Manhattan</a></li>
+ 				 <li class="box"><a href="brooklyn/index.html">Brooklyn</a></li>
+ 				 <li class="box"><a href="rules/index.html">The Rules</a></li>
+ 				 <li class="box"><a href="index.html">Home</a></li>
+ 		</div>
  		</div>
  	</div>
 </nav>
@@ -73,6 +74,7 @@
 		</div>
 
 
+<div id="pics">
 	<div class="row">
 		<div class="small-12 medium-4 large-4 columns"
 		<div id="erving">
@@ -84,20 +86,21 @@
 		</div>
 		<div class="small-12 medium-4 large-4 columns"
 		<div id="twii">
-			<img src="images/twentyfour.jpg">
+			<img src="images/24.jpg">
 		</div>
 	</div>
+</div>
 
-
-
-<div class="row">
+	<div class="row">
 	<div class="small-6 small-centered columns"
 		<div id="caption">
 			<p> Reviving the dying art of streetball </p>
 		</div>
+		<div id="description">
+			<p> A not-for-profit looking to bring you the best pickup basketball experience possible</p>
+		</div>
 	</div>
-	</div>
-	</div>
+</div>
 
 <div class="row">
 	<div class="small-3columns"
@@ -108,7 +111,7 @@
 </div>
 	</div>
 <div class="row">
-	<div class="small-3 columns"
+	<div class="small-3 columns"x
 <div id="tel">
 <p> 917. 647. 4439</p>
 </div>
