--- a/manhattan/mpark1.html
+++ b/manhattan/mpark1.html
@@ -7,7 +7,18 @@
 <title> Rucker Holcombe Park</title>
 </head>
 <body>	
-
+<nav>
+	<div class="row">
+		<div class="large-12 medium-12 small-12 columns"
+			<ul style="list-style-type: none;">
+  				 <li class="box"><a href="../manhattan/index.html">Manhattan</a></li>
+ 				 <li class="box"><a href="../brooklyn/index.html">Brooklyn</a></li>
+ 				 <li class="box"><a href="../rules/index.html">The Rules</a></li>
+ 				 <li class="box"><a href="../index.html">Home</a></li>
+ 			</ul> 
+ 		</div>
+ 	</div>
+</nav>
 <h1> Rucker Park - Home of the Legends </h1>
 
 
@@ -23,7 +34,7 @@ Located on W. 155 St. and 8 Ave. in Harlem, Rucker Park is a baller's paradise.<
 </div>
 	</p>
 
-<h2> Recent Highlights</h2>
+
 
 </body>
 
