--- a/manhattan/mpark2.html
+++ b/manhattan/mpark2.html
@@ -7,7 +7,18 @@
 <title> The Cage</title>
 </head>
 <body>	
-
+<nav>
+	<div class="row">
+		<div class="large-12 medium-12 small-12 columns"
+			<ul style="list-style-type: none;">
+  				 <li class="box"><a href="../manhattan/index.html">Manhattan</a></li>
+ 				 <li class="box"><a href="../brooklyn/index.html">Brooklyn</a></li>
+ 				 <li class="box"><a href="../rules/index.html">The Rules</a></li>
+ 				 <li class="box"><a href="../index.html">Home</a></li>
+ 			</ul> 
+ 		</div>
+ 	</div>
+</nav>
 <h1> W 4th Street Courts - The Cage </h1>
 
 
@@ -22,7 +33,6 @@ Located between West 4th Street and Avenue of the Americas in the heart of <br /
 <img src="images/cage2.jpg" alt="The Cage" width="382" height="310" />
 </div>
 	</p>
-<h2> Recent Highlights</h2>
 
 </body>
 
