--- a/manhattan/mpark3.html
+++ b/manhattan/mpark3.html
@@ -7,7 +7,18 @@
 <title> Cherry Tree Park</title>
 </head>
 <body>	
-
+<nav>
+	<div class="row">
+		<div class="large-12 medium-12 small-12 columns"
+			<ul style="list-style-type: none;">
+  				 <li class="box"><a href="../manhattan/index.html">Manhattan</a></li>
+ 				 <li class="box"><a href="../brooklyn/index.html">Brooklyn</a></li>
+ 				 <li class="box"><a href="../rules/index.html">The Rules</a></li>
+ 				 <li class="box"><a href="../index.html">Home</a></li>
+ 			</ul> 
+ 		</div>
+ 	</div>
+</nav>
 <h1> East Harlem Cherry Tree Park </h1>
 
 
@@ -22,7 +33,7 @@ Located between E 99 Street and 3rd Avenue in East Harlem, Cherry Tree Park <br 
 <img src="images/cherry3.jpg" alt="Cherry Park" width="382" height="310" />
 </div>
 	</p>
-<h2> Recent Highlights</h2>
+
 
 </body>
 
