--- a/rules/index.html
+++ b/rules/index.html
@@ -15,6 +15,7 @@
   				 <li class="box"><a href="../manhattan/index.html">Manhattan</a></li>
  				 <li class="box"><a href="../brooklyn/index.html">Brooklyn</a></li>
  				 <li class="box"><a href="rules/index.html">The Rules</a></li>
+ 				 <li class="box"><a href="../index.html">Home</a></li>
  			</ul> 
  		</div>
  	</div>
